--- a/apuestas_back/pom.xml
+++ b/apuestas_back/pom.xml
@@ -98,6 +98,11 @@
 			<version>2.1.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
