dev [front-tmp] inicio desarrollo login

--- a/apuestas_front_tmp/tsconfig.json
+++ b/apuestas_front_tmp/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "noImplicitAny": false,
     "strictPropertyInitialization": false,
     "strictNullChecks": false,
     "baseUrl": "./",
@@ -12,7 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
