--- a/apuestas_back/src/main/resources/application.yml
+++ b/apuestas_back/src/main/resources/application.yml
@@ -1,3 +1,20 @@
 server:
-  port: 7001
+  port: 8001
+logging:
+  config: classpath:log4j.xml
+spring:
+  datasource:
+    db:
+      jdbc-url: jdbc:mysql://localhost/apuestasbd?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Madrid
+      username: apuestasuser
+      password: OAa7FcmnvGiooQqOl8bQ
+      driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        format_sql: true
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
